# XCM_Asset_Hub_Integration

./: ASSIGNMENT.md  Cargo.toml  README.md  rust-toolchain.toml  zombienet-omni-node.toml
integration-tests/emulated/: Cargo.toml
integration-tests/emulated/src/: lib.rs
integration-tests/emulated/src/chains/: mod.rs
integration-tests/emulated/src/chains/asset_hub_westend/: genesis.rs  mod.rs
integration-tests/emulated/src/chains/parachain/: genesis.rs  mod.rs
integration-tests/emulated/src/chains/westend/: genesis.rs  mod.rs
integration-tests/emulated/src/network/: mod.rs
integration-tests/emulated/src/tests/: mod.rs
pallets/xcm-utils/: Cargo.toml
pallets/xcm-utils/src/: benchmarking.rs  lib.rs  weights.rs
runtime/: Cargo.toml  README.md  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
scripts/: polkadot-snap.sh
