[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
default-members = ["pallets/xcm-utils", "runtime"]
members = [
    "pallets/xcm-utils",
    "runtime",
    "integration-tests/emulated",
]
resolver = "2"

[workspace.dependencies]
# Local.
parachain-runtime = { path = "./runtime", default-features = false }
pallet-xcm-utils = { path = "./pallets/xcm-utils", default-features = false }

# SDK.
polkadot-sdk = { version = "2503.0.1", default-features = false }

# Utilities.
clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
serde = { version = "1.0.214", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "26.0.1", default-features = false }
frame = { version = "0.9.1", default-features = false, package = "polkadot-sdk-frame" }
tracing = { version = "0.1.37", default-features = false }
westend-runtime = { version = "22.1.0", default-features = false }
asset-hub-westend-runtime = { version = "0.29.2", default-features = false }
westend-runtime-constants = { version = "20.0.0", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

