[package]
name = "pallet-xcm-utils"
description = "FRAME pallet with some pre-defined cross-chain interactions"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
tracing = { workspace = true }

[dependencies.polkadot-sdk]
workspace = true
default-features = false
features = [
  "staging-parachain-info",
  "staging-xcm",
  "staging-xcm-builder",
  "sp-core",
  "sp-runtime",
]

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = ["codec/std", "frame/std", "scale-info/std", "polkadot-sdk/std"]
try-runtime = ["frame/try-runtime"]
